--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "0.70.2",
+    "react-native-doodle": "../",
     "react-native-svg": "^13.2.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
