feat: svg files to react component format

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-svg": "*",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "react-native-svg": "*"
   }
 }
