--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "strictNullChecks": true,
     "jsx": "react"
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "example"]
 }
