chore: update package version
- change to remote package (not local)

--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "0.70.2",
-    "react-native-doodle": "file:../",
+    "react-native-doodle": "^0.1.0",
     "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
